# ResearchPilot

./: .gitignore  Makefile  README.md  docker-compose.yml
assets/: README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  embeddings.py  llm.py  main.py  models.py  store.py  vector_store.py
backend/app/services/: pipeline.py  search.py
backend/tests/: test_api.py  test_embeddings.py  test_pipeline.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/tests/: home.test.tsx
